board divs populated

--- a/index.css
+++ b/index.css
@@ -1,5 +1,10 @@
-#main {
+div {
   width: 80px;
   height: 80px;
   background-color: red;
+  /*position: relative;*/
+  margin-left: 5px;
+  margin-bottom: 5px;
+  /*display: inline-block;*/
+  float: left;
 }
