board working and event listeners listening

--- a/index.css
+++ b/index.css
@@ -1,10 +1,59 @@
 div {
-  width: 80px;
-  height: 80px;
-  background-color: red;
-  /*position: relative;*/
-  margin-left: 5px;
-  margin-bottom: 5px;
+  width: 127.5px;
+  height: 127.5px;
   /*display: inline-block;*/
   float: left;
+  z-index: 1;
+
+}
+
+.box1 {
+  border-right: black 2px solid;
+  border-bottom: black 2px solid;
+}
+
+.box2 {
+  border-left:black 2px solid;
+  border-right: black 2px solid;
+  border-bottom: black 2px solid;
+}
+
+.box3 {
+  border-left:black 2px solid;
+  border-bottom: black 2px solid;
+}
+
+.box4 {
+  border-top: black 2px solid;
+  border-right: black 2px solid;
+  border-bottom: black 2px solid;
+}
+
+.box5 {
+  border-top: black 2px solid;
+  border-right: black 2px solid;
+  border-bottom: black 2px solid;
+  border-left:black 2px solid;
+}
+
+.box6 {
+ border-top: 2px black solid;
+ border-left: 2px black solid;
+ border-bottom: 2px black solid;
+}
+
+.box7 {
+ border-top: 2px black solid;
+ border-right: 2px black solid;
+}
+
+.box8 {
+ border-top: 2px black solid;
+ border-left: 2px black solid;
+ border-right: 2px black solid;
+}
+
+.box9 {
+ border-top: 2px black solid;
+ border-left: 2px black solid;
 }
